@@ -15,13 +15,15 @@ namespace Geithware\DebugMysqlDb\Database;
  * The TYPO3 project - inspiring people to share!
  */
 use Psr\Log\LoggerAwareInterface;
+use Psr\Log\LoggerAwareTrait;
+use Psr\Http\Message\ServerRequestInterface;
+
 use TYPO3\CMS\Core\Configuration\ExtensionConfiguration;
 use Geithware\DebugMysqlDb\Api\DebugApi;
 use Geithware\DebugMysqlDb\Api\DoctrineApi;
 use Geithware\DebugMysqlDb\Database\Logging\SqlQueryLogger;
 use TYPO3\CMS\Typo3DbLegacy\Database\DatabaseConnection;
 use TYPO3\CMS\Core\Utility\DebugUtility;
-use Psr\Log\LoggerAwareTrait;
 
 use Doctrine\Common\EventManager;
 use Doctrine\DBAL\Cache\QueryCacheProfile;
@@ -59,6 +61,11 @@ class DoctrineConnection extends \TYPO3\CMS\Core\Database\Connection implements 
      * @var bool
      */
     protected $deprecationWarningThrown = true;
+    
+    private function getRequest(): ServerRequestInterface
+    {
+        return $GLOBALS['TYPO3_REQUEST'];
+    }
 
     /**
      * Initializes a new instance of the Connection class.
@@ -90,7 +97,7 @@ class DoctrineConnection extends \TYPO3\CMS\Core\Database\Connection implements 
         $this->fileWriterMode = $extensionConfiguration['FILEWRITER'] ? intval($extensionConfiguration['FILEWRITER']) : 0;
         $this->backTrace = (bool) $extensionConfiguration['BTRACE_SQL'];
 
-        $this->debugApi = GeneralUtility::makeInstance(DebugApi::class, $extensionConfiguration);
+        $this->debugApi = GeneralUtility::makeInstance(DebugApi::class, $this->getRequest(), $extensionConfiguration);
         $this->doctrineApi = GeneralUtility::makeInstance(DoctrineApi::class);
     }
 
